2.0.10
	+ Now redis backend returns undef on get for undefined values
	+ Allow custom mason templates under /etc/ebox/stubs
	+ Better checks before restoring a configuration backup with
	  a set of modules different than the installed one
	+ Wait for 10 seconds to the child process when destroying the
	  progress indicator to avoid zombie processes
	+ Caught SIGPIPE when trying to contact Redis server and the
	  socket was already closed
	+ Do not stop redis server when restarting apache but only when
	  the service is asked to stop
	+ Improvements in import/export configuration (know before as
	  configuration backup)
	+ Improvements in ProgressIndicator
	+ Better behaviour of read-only rows with up/down arrows
	+ Added support for printableActionName in DataTable's
	+ Added information about automatic configuration backup
	+ Removed warning on non existent file digest
	+ Safer way to check if core modules exist during installation
2.0.9
	+ Treat wrong installed packages as not-existent modules
	+ Added a warning in dashboard informing about broken packages
	+ File sharing and mailfilter log event watchers works again since
	  it is managed several log tables per module
2.0.8
	+ Replaced zentyal-conf script with the more powerful zentyal-redisvi
	+ Set always the same default order for dashboard widgets
	+ Added help message to the configure widgets dialog
	+ Check for undefined values in logs consolidation
	+ Now dashboard notifies fails when restarting a service
	+ Fixed bug with some special characters in dashboard
	+ Fixed bug with some special characters in disk usage graph
2.0.7
	+ Pre-installation includes sudoers.d into sudoers file if it's not yet
	  installed
	+ Install apache-prefork instead of worker by default
	+ Rename service certificate to Zentyal Administration Web Server
2.0.6
	+ Use mod dependencies as default restore dependencies
	+ Fixed dependencies in events module
	+ Increased recursive dependency threshold to avoid