@@ -1,4 +1,5 @@
 2.0.10
+	+ New methods entry_exists and st_entry_exists in config backend
 	+ Now redis backend returns undef on get for undefined values
 	+ Allow custom mason templates under /etc/ebox/stubs
 	+ Better checks before restoring a configuration backup with
